AC_PREREQ([2.68])
AC_INIT([cpp-8601], [0.0.1], [kyle.nahrgang@gmail.com], [cpp-8601], [https://github.com/kyle-nahrgang/cpp-8601])

AC_CONFIG_AUX_DIR(aux-dist)
AM_INIT_AUTOMAKE

AC_PROG_MAKE_SET
AC_PROG_CXX
AC_LANG(C++)

CXXFLAGS="-std=c++11 -fPIC"

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([Makefile include/Makefile src/Makefile docs/Makefile])

AC_OUTPUT